ver información por medio de un enlace

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -238,6 +238,12 @@ input[type="submit"] {
 tr.odd {
     border-bottom: 0.5px solid #ececec;
 }
+.navigation li a i, .navigation li a svg {
+    height: 20px !important;
+    width: 24px !important;
+    font-size: 20px !important;
+    margin-right: 1.38rem !important;
+}
 @media only screen and (max-width: 769px) {
     .imagen-login {
         display: none;
